src/snapshots/solfaml_parser__parser__tests__metadata_parser.snap
---
source: src/parser.rs
expression: metadata
---
Ok(
    [
        (
            "title",
            "foo",
        ),
        (
            "author",
            "bar",
        ),
        (
            "time",
            "4/4",
        ),
        (
            "key",
            "C",
        ),
        (
            "description",
            "Hello World!\nLorem Ipsum",
        ),
    ],
)
